src/objects/Invoice_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Error_Response__c</fullName>
        <label>Batch Error Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Batch_Period__c</fullName>
        <label>Batch Period</label>
        <picklist>
            <picklistValues>
                <fullName>Today</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Processed__c</fullName>
        <label>Batch Processed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Records__c</fullName>
        <label>Batch Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Type__c</fullName>
        <label>Batch Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoices</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Batch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>Batch_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Direct_Debit_Batches</fullName>
        <columns>NAME</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <columns>Batch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Direct Debit</value>
        </filters>
        <label>Direct Debit Batches</label>
        <sharedTo>
            <role>BJBGlobalAccountsAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Payment_Batch</fullName>
        <columns>NAME</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Type__c</field>
            <operation>equals</operation>
            <value>Payments</value>
        </filters>
        <label>Payment Batch</label>
        <sharedTo>
            <role>SLX_Aus_Receptionist</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_s_Batch</fullName>
        <columns>Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Type__c</field>
            <operation>equals</operation>
            <value>Invoices</value>
        </filters>
        <filters>
            <field>Batch_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Batch</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Payment_Batch</fullName>
        <columns>Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <columns>Batch_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Batch_Type__c</field>
            <operation>equals</operation>
            <value>Payments</value>
        </filters>
        <label>Today&apos;s Payment Batch</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_Payment_Batch</fullName>
        <columns>Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Batch_Type__c</field>
            <operation>equals</operation>
            <value>Payments</value>
        </filters>
        <label>Yesterday&apos;s Payment Batch</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Batch</fullName>
        <columns>Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Batch_Type__c</field>
            <operation>equals</operation>
            <value>Invoices</value>
        </filters>
        <label>Yesterday&apos;s Batch</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Batch_SLX_NZ</fullName>
        <columns>Batch_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Batch_Date__c</columns>
        <columns>Batch_Records__c</columns>
        <columns>status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Batch_Type__c</field>
            <operation>equals</operation>
            <value>Invoices</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>SLX NZ</value>
        </filters>
        <label>Yesterday&apos;s Batch SLX NZ</label>
    </listViews>
    <nameField>
        <label>Invoice Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>